[package]
name = "shadertoy_harness"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
wgpu = { version = "0.15", features = ["spirv"] }
notify = "6.1.1"
clap = { version = "4.1", features = ["derive"] }
shaderc = "0.8.3"
bytemuck = { version = "1.12", features = ["derive"] }
image = "0.25.2"
pollster = "0.3"
futures = "0.3"
chrono = "0.4"
